--- a/products/templates/registration/register.html
+++ b/products/templates/registration/register.html
@@ -5,16 +5,16 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">{% translate "Log in" %}</legend>
+                <legend class="border-bottom mb-4">{% translate "Register form" %}</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button type="submit">{% translate "Log in!" %}</button>
+                <button type="submit">{% translate "Register" %}</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                {% translate "Don't have an account yet?" %} <a class="ml-2" href="{% url 'register' %}">{% translate "Register!" %}</a>
+                {% translate "Already have an account?" %} <a class="ml-2" href="{% url 'login' %}">{% translate "Log in" %}</a>
             </small>
         </div>
     </div>
